crates/xlate/tests/snapshots/golden_matrix__instr_message_shorthand__gpt-4o-mini__20260910__responses_to_chat__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": "What is 2+2?"
    }
  ],
  "max_completion_tokens": 64
}
--- headers ---
upstream_streams: false
--- degraded ---
